--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
   },
   "devDependencies": {
     "@types/three": "^0.129.1"
-  }
+  },
+  "homepage" : "https://next.jacobzwang.com/chaotic-attractors/"
 }
